# openapoc_android

./: .gitignore  .gitmodules  .travis.yml  README.md  build.gradle  gradle.properties  settings.gradle
OpenApoc/: build.gradle  generate_gamestate_serialize.sh
OpenApoc/src/androidTest/java/org/sfalexrog/openapoc/: ApplicationTest.java
OpenApoc/src/main/: AndroidManifest.xml
OpenApoc/src/main/java/org/libsdl/app/: SDLActivity.java
OpenApoc/src/main/java/org/sfalexrog/openapoc/: ConfigActivity.java  OpenApocActivity.java  PreloaderActivity.java
OpenApoc/src/main/java/org/sfalexrog/openapoc/config/: Config.java  DataChecker.java
OpenApoc/src/main/java/org/sfalexrog/openapoc/ui/: ConfigAdapter.java  ConfigOption.java  ConfigOptionFactory.java  DataDirConfigOption.java  LanguageConfigOption.java  RendererConfigOption.java  ScaleConfigOption.java
OpenApoc/src/main/java/org/sfalexrog/openapoc/util/: AssetUnzipper.java
OpenApoc/src/main/jni/: Application.mk  CMakeLists.txt
OpenApoc/src/main/jni/SDL/: .hg_archival.txt  WhatsNew.txt
OpenApoc/src/main/jni/SDL_image/: .hg_archival.txt
OpenApoc/src/main/jni/allegro-mkfiles/: Android.mk
OpenApoc/src/main/jni/allegro-mkfiles/include/allegro5/internal/: aintern_acodec_cfg.h  aintern_audio_cfg.h  aintern_image_cfg.h
OpenApoc/src/main/jni/allegro-mkfiles/include/allegro5/platform/: alplatf.h
OpenApoc/src/main/jni/boost_mkfiles/: Android.mk
OpenApoc/src/main/jni/boost_slim/: .CMakeLists.txt.swp  CMakeLists.txt
OpenApoc/src/main/jni/boost_slim/libs/filesystem/src/: operations.cpp
OpenApoc/src/main/jni/icu55/: CMakeLists.txt  test.cpp
OpenApoc/src/main/jni/icu55-mkfiles/: Android.mk
OpenApoc/src/main/jni/icu55-mkfiles/common/: Android.mk
OpenApoc/src/main/jni/icu55-mkfiles/stubdata/: Android.mk
OpenApoc/src/main/jni/icu55/source/common/unicode/: utypes.h
OpenApoc/src/main/jni/icu55/source/i18n/: dtitvfmt.cpp  smpdtfmt.cpp
OpenApoc/src/main/jni/openapoc-mkfiles/: Android.mk  version.h
OpenApoc/src/main/jni/physfs-mkfiles/: Android.mk
OpenApoc/src/main/jni/tinyxml-mkfiles/: Android.mk
OpenApoc/src/main/res/layout/: activity_config.xml  activity_open_apoc.xml  activity_preloader.xml  data_dir_config_option.xml  language_config_option.xml  renderer_config_option.xml  scale_config_option.xml
OpenApoc/src/main/res/menu/: menu_start.xml
OpenApoc/src/main/res/values/: strings.xml  styles.xml
OpenApoc/src/test/java/org/sfalexrog/openapoc/: ExampleUnitTest.java
aFileDialog/: build.gradle
aFileDialog/src/main/: AndroidManifest.xml
aFileDialog/src/main/java/ar/com/daidalos/afiledialog/: FileChooserCore.java  FileChooserDialog.java
aFileDialog/src/main/res/values-ru/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
